@@ -21,7 +21,6 @@
 #include <mpi.h>
 
 #include <string>
-#include <vector>
 
 #include <music/data_map.hh>
 #include <music/index_map.hh>
@@ -153,11 +152,11 @@ namespace MUSIC {
   
   class EventOutputPort : public EventPort,
 			  public OutputRedistributionPort {
-    std::vector<EventRoutingData>* routingData;
+    EventRoutingMap* routingMap;
     EventRouter router;
   public:
     EventOutputPort (Setup* s, std::string id)
-      : Port (s, id), routingData (new std::vector<EventRoutingData>) { }
+      : Port (s, id), routingMap (new EventRoutingMap ()) { }
     void map (IndexMap* indices, Index::Type type);
     void map (IndexMap* indices, Index::Type type, int maxBuffered);
     OutputConnector* makeOutputConnector (ConnectorInfo connInfo);
